creating component view

--- a/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Index.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Index.cshtml
@@ -241,7 +241,7 @@
 <div class="subform">
    
    
-        @await Component.InvokeAsync("MillDetail", new { id = 1 })
+        @await Component.InvokeAsync(nameof(MillDetail), new { id = 1 })
     
 
 </div>
