moving proddetail view component to its own view file

--- a/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Index.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Index.cshtml
@@ -254,7 +254,7 @@
 
             int chosenid = Int32.Parse(split[3]);
 
-            @await Component.InvokeAsync(nameof(MillDetail), new { id = chosenid })
+            @await Component.InvokeAsync(nameof(ProdDetail), new { id = chosenid })
 
         }
 
