empty prod.data case
handling case where the mill exists, but there is no production data for it

--- a/EFGetStarted.AspNetCore.ExistingDb/Views/Shared/Components/ProdDetail/Default.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/Shared/Components/ProdDetail/Default.cshtml
@@ -1,5 +1,13 @@
 ﻿@model IEnumerable <MillData.Models.ProductionData>
-<h3>Production Data: Mill @Model.First().FkMillKey</h3>
+
+@{
+    if (Model.Any())
+    { <h3>Production Data: Mill @Model.First().FkMillKey</h3> }
+    else
+    { <div id="notif">No production data available.</div> }
+}
+
+
 <style>
     .leftdiv, .middiv, .rightdiv {
         float: left;
